# iaf-nace-classifier

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  GUIA_BUSQUEDA.md  Procfile  README.md  api_server.py  buscar_actividad.py  debug_corte.py  deployment_guide.md  ejemplo_busqueda.py  extract_iaf_nace.py  main.py  pyproject.toml  reproduce_issue.py  reproduce_weighting.py  sectores_iaf_completos.json  verify_advanced.py  verify_advanced_debug.py  verify_api.py  verify_mapping.py  wordpress_integration.html
data/: benchmark_queries.json  full_benchmark.json  stress_test.json
examples/: ejemplo_busqueda.py
iaf_nace_classifier/: __init__.py  api.py  cli.py  mapping.py  search.py
iaf_nace_classifier/data/: iaf_nace_mapeo_expandido.json  risks.py
static/: app.js  index.html  style.css
