[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iaf-nace-classifier"
version = "0.1.0"
description = "Clasificador IAF-NACE: Mapea códigos NACE (UE) a sectores IAF con descripciones completas"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Fernando" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["nace", "iaf", "clasificación", "empresas", "sectores", "actividades"]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
extractor = [
    "PyMuPDF>=1.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
iaf-nace-classify = "iaf_nace_classifier.cli:main"
iaf-nace-search = "scripts.buscar_actividad:main"

[project.urls]
Homepage = "https://github.com/fer/iaf-nace-classifier"
Repository = "https://github.com/fer/iaf-nace-classifier"
Issues = "https://github.com/fer/iaf-nace-classifier/issues"

[tool.setuptools]
packages = ["iaf_nace_classifier"]

[tool.setuptools.package-data]
iaf_nace_classifier = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
]
